[package]
name = "owcr_parser"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.3"
serde = { version = "1.0.99", features = ["derive"] }